[package]
name          = "merkle_sigs"
version       = "1.7.1-pre"
authors       = ["Frederic Jacobs <github@fredericjacobs.com>"]
description   = "Implementation of Merkle signing"
license       = "BSD-3-Clause"
readme        = "README.md"
documentation = "https://docs.rs/merkle_sigs"
homepage      = "https://github.com/SpinResearch/merkle_sigs.rs"
repository    = "https://github.com/SpinResearch/merkle_sigs.rs"
edition       = "2018"

[dependencies]
ring         = "0.17.8"
lamport_sigs = { git = "https://github.com/mii443/lamport_sigs.rs" }

[dependencies.merkle]
git = "https://github.com/mii443/merkle.rs"
features = ["serialization-protobuf"]

[package.metadata.release]
sign-commit                 = true
sign-tag                    = true
pre-release-commit-message  = "Release version {{version}}."
post-release-commit-message = "Start next development iteration {{version}}."
tag-message                 = "Release version {{version}}."
doc-commit-message          = "Update documentation."
dev-version-ext             = "pre"

